# qt_stack

./: README.md
qt_template/: CMakeLists.txt
qt_template/include/: mainwindow.h
qt_template/src/: mainwindow.cpp
qt_template/ui/: mainwindow.ui
